compiler/tests/errortests/typeerror_operator.txt
FILENAME:8:28: error: Operator '__add__' is not overloaded for struct type 'Point'.
    let result : Point = p + 5; // Error: cannot add Point and i32
                           ^
FILENAME:8:28: error: Could not determine type of initial value for variable 'result'.
    let result : Point = p + 5; // Error: cannot add Point and i32
                           ^
